<resources>
    <string name="app_name">SingleStep</string>
    <string name="search">Search</string>
    <string name="num_guests_default">0 guests</string>
    <string name="num_guests">%d guest</string>
    <string name="num_guests_multiple">%d guests</string>
    <string name="enter_budget">Enter budget</string>
    <string name="enter_dates">Enter dates</string>
    <string name="popular_destinations">Popular Destinations</string>
    <string name="budget_suggestion">&lt; $%s</string>
    <string name="budget_text">$%s</string>
    <string name="explore">Explore</string>
    <string name="my_trips">My Trips</string>
    <string name="enter_destination">Enter destination</string>
    <string name="suggested_budgets">Suggested Budgets</string>
    <string name="plan_trip">Plan Trip</string>
    <string name="enter_start_location">Enter start location</string>
    <string name="autofill_destination">"Autofilled destination from suggestions"</string>
    <string name="autofill_budget">"Autofilled budget from suggestions"</string>
    <string name="places_api_key">AIzaSyBIDq3zcHWyLH8ue7ONXuNCuu29WS-MFO4</string>
    <string name="amadeus_api_key">wYjWuMqgy3RHQXX5vZifusiu9aMg2cRg</string>
    <string name="amadeus_api_secret">rBsoLAGsssT5KAhs</string>
    <string name="explore_nearby">Explore Nearby</string>
    <string name="view_more">View more…</string>
    <string name="view_less">View less</string>
    <string name="photos">Photos</string>
    <string name="get_directions">Get Directions</string>
    <string name="book_now">Book Now</string>
    <string name="hotels">Hotels</string>
    <string name="booking_api_key">35ba2fe984msh47c31ab84324ed7p143d9ejsne0b6c2e4c472</string>
    <string name="booking_api_host">booking-com18.p.rapidapi.com</string>
    <string name="nights_days_guests">%1$d nights, %2$d days • %3$d guests</string>
    <string name="flights">Flights</string>
    <string name="from_to">%1$s to %2$s</string>
    <string name="round_trip_guests">Round trip • %1$d guests</string>
    <string name="airport_date">%1$s • %2$s</string>
    <string name="date_range">%1$s - %2$s</string>
    <string name="trip_to">Trip to %1$s</string>
    <string name="save_to_my_trips">Save to My Trips</string>
    <string name="selected_hotel">Selected Hotel</string>
    <string name="selected_flights">Selected Flights</string>
    <string name="remove_from_my_trips">Remove from My Trips</string>
    <string name="your_saved_trips_will_appear_here">Your saved trips will appear here</string>
    <string name="explore_failed_response">Unable to fetch nearby tourist attractions\n\nPlease check your internet connection and ensure that location services are turned on</string>
    <string name="explore_empty_response">No nearby tourist attractions found</string>
    <string name="flights_failed_response">Unable to fetch flights at the moment\n\nPlease check your internet connection and try again</string>
    <string name="flights_empty_response">Oops! We couldn\'t find any flights that match your criteria. Don\'t worry though, here are some tips to improve your search:\n\n1. Try increasing your budget to unlock more options\n\n2. Choose cities with airports within a 50km radius for better results</string>
    <string name="hotels_failed_response">Unable to fetch hotels at the moment\n\nPlease check your internet connection and try again</string>
    <string name="hotels_empty_response">Oops! We couldn\'t find any hotels that match your criteria. Don\'t worry though, here are some tips to improve your search:\n\n1. Try increasing your budget to unlock more options\n\n2. Choose cities with hotels within a 50km radius for better results</string>
    <string name="summary_failed_response">Unable to generate itinerary at the moment\n\nPlease check your internet connection and try again</string>
    <string name="summary_empty_response">Oops! We couldn\'t create an itinerary with the passed trip parameters. Change the parameters and try again</string>
    <string name="explore_enable_location">Enable location permission to explore tourist attractions and activities near you!</string>
    <string name="start_searching">Start Searching</string>
    <string name="remaining_budget">Budget Remaining: %1$s %2$s</string>
    <string name="view_itinerary">View Itinerary</string>
    <string name="remove_trip">Remove Trip</string>
</resources>