<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginHorizontal="16dp"
            android:text="@string/search"
            android:textSize="32sp"
            android:textStyle="bold" />

        <fragment
            android:id="@+id/start_location_fragment"
            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_text_view"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp" />

        <fragment
            android:id="@+id/destination_fragment"
            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/start_location_fragment"
            android:layout_marginHorizontal="16dp" />

        <EditText
            android:id="@+id/date_picker_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/destination_fragment"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/background_border"
            android:drawableStart="@drawable/icon_dates"
            android:drawablePadding="8dp"
            android:focusableInTouchMode="false"
            android:hint="@string/enter_dates"
            android:padding="16dp"
            android:textColorHint="@color/faded_grey"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/budget_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/date_picker_edit_text"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/background_border"
            android:drawableStart="@drawable/icon_budget"
            android:drawablePadding="8dp"
            android:hint="@string/enter_budget"
            android:inputType="number"
            android:padding="16dp"
            android:textColorHint="@color/faded_grey"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/guests_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/budget_edit_text"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/background_border_rounded_bottom"
            android:drawableStart="@drawable/icon_guests"
            android:drawablePadding="8dp"
            android:hint="@string/number_of_guests"
            android:inputType="number"
            android:padding="16dp"
            android:textColorHint="@color/faded_grey"
            android:textSize="16sp" />

        <Button
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/guests_edit_text"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:text="@string/plan_trip" />

        <TextView
            android:id="@+id/popular_destinations_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/search_button"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/popular_destinations"
            android:textSize="24sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/popular_destinations_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/popular_destinations_text_view"
            android:clipToPadding="false"
            android:paddingHorizontal="8dp" />

        <TextView
            android:id="@+id/suggested_budgets_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/popular_destinations_recycler_view"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/suggested_budgets"
            android:textSize="24sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/suggested_budgets_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/suggested_budgets_text_view"
            android:layout_marginBottom="80dp"
            android:clipToPadding="false"
            android:paddingHorizontal="8dp" />

    </RelativeLayout>

</ScrollView>