<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/name_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:text="Waterloo Park" />

    <TextView
        android:id="@+id/rating_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_text_view"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:textSize="20sp"
        app:drawableLeftCompat="@drawable/icon_star"
        tools:text="4.6" />

    <TextView
        android:id="@+id/description_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rating_text_view"
        android:layout_marginHorizontal="16dp"
        android:textColor="@color/grey"
        android:textSize="16sp"
        tools:text="50 Laurel Park Trail, Waterloo, Ontario" />

    <TextView
        android:id="@+id/view_more_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/description_text_view"
        android:layout_marginHorizontal="16dp"
        android:text="@string/view_more"
        android:textColor="@color/grey"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/photos_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_more_text_view"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/photos"
        android:textSize="16sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/photos_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/photos_text_view"
        android:layout_marginBottom="8dp"
        android:clipToPadding="false"
        android:paddingHorizontal="8dp" />

    <Button
        android:id="@+id/get_directions_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/photos_recycler_view"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/get_directions" />

    <Button
        android:id="@+id/book_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/get_directions_button"
        android:layout_toEndOf="@id/get_directions_button"
        android:text="@string/proceed_to_booking" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/get_directions_button"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:background="@color/light_grey" />

</RelativeLayout>